# libmariadb-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
bindings/: bindings.rs
src/: lib.rs
